...
    var body: some View {
        NavigationStack {
            Text("Signed In")
                .navigationTitle("Habits Tracker")
                .toolbar {
                    ToolbarItem {
                        Button("Logout") {
                            try? Auth.auth().signOut()
                            GIDSignIn.sharedInstance.signOut()
                            withAnimation(.easeInOut) {
                                logStatus = false
                            }
                        }
...
